Organize repository structure: move scripts and docs, consolidate documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,9 @@ spring.application.name=pixel-art-agent
 
 # Ollama Configuration
 spring.ai.ollama.base-url=http://localhost:11434
-spring.ai.ollama.chat.options.model=qwen3-vl:4b
+spring.ai.ollama.chat.options.model=qwen2.5:3b
 spring.ai.ollama.chat.options.temperature=0.8
 spring.ai.ollama.chat.options.top-p=0.9
-spring.ai.ollama.chat.options.num-predict=500
-# Increase timeout for slower models (5 minutes)
-spring.ai.ollama.timeout=300s
 
 # Logging Configuration
 logging.level.root=INFO
@@ -24,3 +21,7 @@ pixelart.agent.default-style=pixel-art
 pixelart.image.generation.enabled=true
 pixelart.image.generation.api-url=http://localhost:7860
 pixelart.image.generation.model=stable-diffusion
+# Optional: Specify LoRA model name (without .safetensors extension)
+# Example: pixelart.image.generation.lora=pixel-art-style
+pixelart.image.generation.lora=
+pixelart.image.generation.lora-strength=0.8
