docs: consolidate 8 markdown files into single comprehensive README.md
- Merged all documentation into single source of truth
- Added table of contents with navigation links
- Organized into 19 clear sections covering all topics
- Preserved all original content from 8 files
- Improved maintainability and developer experience
- Deleted: README_REFACTORING.md, MOCK_CONFIG_QUICKSTART.md, ARCHITECTURE_DIAGRAM.md, MODEL_ABSTRACTION_SUMMARY.md, REFACTORING_COMPLETE.md, REFACTORING_SUMMARY_FINAL.md, VERIFICATION_CHECKLIST.md, DOCUMENTATION_INDEX.md
- Updated README.md (805 lines, 24 KB)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,21 @@
 server.port=8080
 spring.application.name=pixel-art-agent
 
+# Model Configuration
+# Set to false to use real models (Ollama and Stable Diffusion)
+# Set to true to use mock models for local development
+pixelart.models.use-mock=true
+
+# Chat Model Configuration
+# Set to false to use real Ollama model
+# Set to true to use mock responses for development/testing
+pixelart.chat-model.mock-responses-enabled=true
+
+# Image Model Configuration  
+# Set to false to use real Stable Diffusion model
+# Set to true to use mock images for development/testing
+pixelart.image-model.mock-responses-enabled=true
+
 # Ollama Configuration
 spring.ai.ollama.base-url=http://localhost:11434
 spring.ai.ollama.chat.options.model=qwen2.5:3b
